# testing-tasks-mock-pixi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github_release.yaml
src/mock_pytorch_pixi_tasks/: create_images.py
