# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
packages = ["src/mock_pytorch_pixi_tasks"]

# Clean up the source distribution to avoid big tag.gz files
[tool.hatch.build.targets.sdist]
exclude = [
    # Exclude tests from the source distribution
    "tests",
    # Exclude typically large files and directories that are not needed
    # This might not exists or be named differently in your project
    # TBD if we want to include these or not
    "docs",
    "data",
    "examples",
    "notebooks",
    ".github",
    # Remove all jupyter notebook and checkpoints
    "**/*.ipynb_checkpoints",
    "**/*.ipynb",
    # NB all things in .gitignore are excluded by default of hatchling
]


# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "mock_pytorch_pixi_tasks"
dynamic = ["version"]
description = "Mock package for pytorch pixi task collection"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Name Surname", email = "name.surname@example.org" }]

# Required Python version and dependencies
requires-python = ">=3.11, <3.12"
dependencies = ["ngio", "fractal_task_tools", "torch", "torchvision"]

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
mock_pytorch_pixi_tasks = { path = ".", editable = true }

[tool.pixi.target.linux-64.dependencies]
cuda-version = "12.8"

[tool.pixi.environments]
default = { features = [] }
